# g2o_test

./: CMakeLists.txt  readme.md  run.sh
include/: g2o_test.h  generate_data.h
src/: g2o_test.cpp  generate_data.cpp  main.cpp
